# rest-api-db

./: MF.db  README.md  logging_.py  main.py  pyproject.toml  sql.py
src/: app.py
src/api/status/: del_hendlers.py  get_handlers.py  post_handlers.py  put_heandlers.py
src/models/: __init__.py  base_model.py  events.py  tariffs.py  users.py
src/service/: routes.py
src/views/: view_tables.py
