[tool.poetry]
name = "rest-api-db"
version = "0.1.0"
description = ""
authors = ["ilderebezov <ilderebezov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"
SQLAlchemy = "^1.4.32"
aiohttp = "^3.8.1"
aiohttp_cors = "^0.7.0"
pandas = "^1.4.1"
marshmallow = "^3.15.0"
pytest-aiohttp = "^1.0.4"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
